--- a/app/globals.css
+++ b/app/globals.css
@@ -206,7 +206,7 @@
   }
 
   .category-tag {
-    @apply font-medium text-[16px]  px-4 py-2 rounded-full;
+    @apply bg-pink-200 font-medium text-[16px]  px-4 py-2 rounded-full;
   }
 
   .pattern {
